# synergy-hogsback

./: .clang-format  .gitignore  .gitmodules  Build.properties  CMakeLists.txt  Dependencies.txt  LICENSE  README.md  lsif.cpp  lsif.hpp  multicast.cpp  multicast.hpp  service.cpp  service.hpp  stub_gui.cpp  synergy-core.log.1  zmq.hpp
gui/: ActivationPage.qml  CMakeLists.txt  ConfigurationPage.qml  LogSettingView.qml  gui.pro  main.cpp  main.qml  qml.qrc
gui/lib/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  CloudClient.h  Common.cpp  Common.h  ConfigFileManager.cpp  ConfigFileManager.h  ConfigMessageConvertor.cpp  ConfigMessageConvertor.h  DebugLevel.cpp  DebugLevel.h  DeviceManager.h  Direction.h  DirectoryManager.cpp  DirectoryManager.h  Hostname.cpp  IScreenArrangement.h  IpManager.cpp  Ipc.cpp  Ipc.h  IpcClient.cpp  IpcClient.h  IpcReader.cpp  IpcReader.h  LibMacro.h  LogManager.cpp  Multicast.cpp  MulticastManager.cpp  MulticastManager.h  MulticastMessage.cpp  MulticastMessage.h  MulticastMessageType.h  ProcessCommand.cpp  ProcessManager.cpp  ProcessManager.h  ProcessMode.h  Screen.cpp  Screen.h  ScreenBBArrangement.cpp  (+12 more)
gui/res/qml/: AdvancedPage.qml  ConfigSettingView.qml  ConfigurationPage.qml  CustomBorder.qml  CustomCheckBox.qml  GeneralSettingView.qml
gui/simulator/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  mainwindow.h
gui/tests/: AutoTest.h  CMakeLists.txt  ConfigFileManagerTest.h  ConfigMessageConvertorTest.cpp  ConfigMessageConvertorTest.h  MulticastMessageTest.cpp  MulticastMessageTest.h  ProcessCommandTest.cpp  ProcessCommandTest.h  ScreenBBArrangementTest.cpp  ScreenBBArrangementTest.h  main.cpp  tests.pro
gui/tests/mock/: MockDeviceManager.cpp  MockDeviceManager.h  MockDirectoryManager.cpp  MockDirectoryManager.h  MockScreenModel.cpp  MockScreenModel.h
protocol/: CMakeLists.txt  IPAddress.fbs  ScreenInfo.capn  ScreenInfo.fbs  Version.capn  screen_info.hpp
service/: CMakeLists.txt  lsif.cpp  lsif.hpp  lsif_bsd.cpp  lsif_linux.cpp  lsif_windows.cpp  multicast.cpp  multicast.hpp  service.cpp  service.hpp
synergy/: CMakeLists.txt
synergy/common/: AsioExecutor.h  CMakeLists.txt  ConfigGen.cpp  ConfigGen.h  ConfigGenerator.cpp  ConfigParser.cpp  ConfigParser.h  CrashHandler.cpp  CrashHandler.h  DebugLevel.h  DirectoryManager.cpp  DirectoryManager.h  ErrorMessage.h  GlobalConfig.cpp  GlobalConfig.h  Hostname.h  Logs.cpp  Logs.h  MSWindowsDirectoryManager.cpp  MSWindowsDirectoryManager.h  NetworkParameters.h  OSXDirectoryManager.cpp  OSXDirectoryManager.h  ProcessCommand.cpp  ProcessCommand.h  ProcessMode.h  Profile.cpp  Profile.h  ProfileConfig.cpp  ProfileConfig.h  ProfileConfigSnapshot.h  ProfileSnapshot.cpp  ProfileSnapshot.h  RpcClient.cpp  RpcClient.h  RpcLogSink.cpp  RpcLogSink.h  RpcManager.cpp  RpcManager.h  RpcServer.cpp  (+25 more)
synergy/config/: CMakeLists.txt  helper.mm  main.cpp  main.qml  qml.qrc
synergy/config/helper/: Info.plist  main.cpp
synergy/config/lib/: AccessibilityManager.cpp  App.cpp  App.h  AppConfig.cpp  AppConfig.h  CMakeLists.txt  CloudClient.cpp  CloudClient.h  Common.cpp  Common.h  DeviceManager.cpp  DirectoryManager.cpp  DirectoryManager.h  ErrorView.cpp  ErrorView.h  FontManager.h  Hostname.cpp  Hostname.h  IScreenArrangement.h  IpManager.h  LogManager.cpp  LogManager.h  OSXProcessList.cpp  OSXVolumeManagement.mm  ProcessManager.cpp  ProcessManager.h  Profile.h  ProfileListModel.cpp  ProfileListModel.h  ProfileManager.cpp  ProfileManager.h  ScreenBBArrangement.cpp  ScreenBBArrangement.h  ScreenListModel.cpp  ScreenListModel.h  ScreenManager.cpp  ScreenManager.h  ServiceProxy.cpp  ServiceProxy.h  UIScreen.cpp  (+4 more)
synergy/config/res/: synergy.rc
synergy/gui/: AccessibilityPage.qml  ActivationPage.qml  BodyText.qml  CMakeLists.txt  ConfigurationPage.qml  CustomBorder.qml  FacebookAuthWeb.qml  HeaderText.qml  LogoText.qml  ProfileMenu.qml  ProfileMenuButton.qml  ProfilePage.qml  SynergyButton.qml  SynergyButtonStyle.qml  Version.qml  helper.mm  main.cpp  main.qml  qml.qrc  synergy.rc
synergy/gui/helper/: CMakeLists.txt  Info.plist  Launchd.plist  main.cpp
synergy/gui/lib/: Accessibility.mm  AccessibilityManager.h  App.cpp  App.h  AppConfig.cpp  AppConfig.h  CMakeLists.txt  CloudClient.cpp  CloudClient.h  ConfigFileManager.cpp  ConfigMessageConvertor.h  ConnectivityTester.cpp  ConnectivityTester.h  CoreInterface.cpp  CoreInterface.h  DebugLevelUtil.cpp  DebugLevelUtil.h  DirectoryManager.cpp  DirectoryManager.h  FontManager.cpp  Hostname.h  IpManager.cpp  LibMacro.h  LogManager.cpp  LogManager.h  Macro.h  Multicast.cpp  Multicast.h  MulticastMessage.cpp  MulticastMessage.h  MulticastMessageType.h  ProcessCommand.cpp  ProcessCommand.h  ProcessManager.cpp  ProcessManager.h  Profile.h  ProfileListModel.cpp  ProfileListModel.h  ProfileManager.cpp  ProfileManager.h  (+20 more)
synergy/gui/res/: synergy.rc
synergy/gui/simulator/: CMakeLists.txt  MainWindow.cpp  (+1 more)
synergy/protocol/: CMakeLists.txt
synergy/service/: App.cpp  App.h  CMakeLists.txt  CloudClient.cpp  CloudClient.h  ConfigGenerator.cpp  ConnectivityTester.cpp  ConnectivityTester.h  CoreErrorMonitor.cpp  CoreErrorMonitor.h  CoreManager.cpp  CoreManager.h  CoreProcess.cpp  CoreProcess.h  CoreProcessImpl.cpp  CoreProcessImpl.h  CoreStatusMonitor.cpp  CoreStatusMonitor.h  ErrorNotifier.cpp  ErrorNotifier.h  HttpSession.cpp  HttpSession.h  IOService.h  IPMonitor.cpp  IPMonitor.h  IServiceController.cpp  IServiceController.h  Logs.cpp  Logs.h  MSWindowsServiceController.cpp  MSWindowsServiceController.h  NetworkAdapters.h  NetworkAdaptersUnix.cpp  NetworkAdaptersWindows.cpp  PriorityJobQueues.h  ProcessManager.cpp  ProcessManager.h  ProfileSnapshot.cpp  ProfileSnapshot.h  ProxyClient.cpp  (+40 more)
synergy/test/: CMakeLists.txt  ConfigGenerationTests.cpp  ConnectivityTest.cpp  NchanWebsocketTest.cpp  ProfileSnapshotTest.cpp  SecuredTcpConnectionTest.cpp  UserConfigTest.cpp  WampRpcTest.cpp
synergy/tests/: CMakeLists.txt  ProfileSnapshotTest.cpp
synergy/tray/: CMakeLists.txt  Controls.cpp  Controls.h  Log.cpp  Log.h  Tray.cpp  Tray.h  helper.mm  main.cpp  tray.qrc
(+115 files in other folders)
